--- a/src/components/HeroHome.css
+++ b/src/components/HeroHome.css
@@ -1,13 +1,5 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-  }
-  
   .hero-container {
-    background: url('/images/90%.webp') center center/cover no-repeat;
+    background: url('/images/90.webp') center center/cover no-repeat;
     height: 100vh;
     width: 100%;
     display: flex;
