--- a/src/components/HeroHome.css
+++ b/src/components/HeroHome.css
@@ -1,5 +1,5 @@
   .hero-container {
-    background: url('/images/90.webp') center center/cover no-repeat;
+    background-image: url('/images/90.webp') center center/cover no-repeat;
     height: 100vh;
     width: 100%;
     display: flex;
