--- a/src/components/HeroHome.css
+++ b/src/components/HeroHome.css
@@ -1,5 +1,8 @@
   .hero-container {
-    background-image: url('/images/90.webp') center center/cover no-repeat;
+    background-image: url('/images/90.webp');
+    background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
     height: 100vh;
     width: 100%;
     display: flex;
