--- a/src/components/HeroHome.css
+++ b/src/components/HeroHome.css
@@ -1,5 +1,5 @@
   .hero-container {
-    background-image: url("images/90.webp");
+    background-image: url("90.webp");
     height: 100vh;
     width: 100%;
     display: flex;
