--- a/src/components/HeroHome.css
+++ b/src/components/HeroHome.css
@@ -12,6 +12,9 @@
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/90.webp");
+  
+}
+
   .hero-container > h1 {
     color: #fff;
     font-size: 100px;
