--- a/src/components/HeroHome.css
+++ b/src/components/HeroHome.css
@@ -1,5 +1,5 @@
   .hero-container {
-    url("https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"); 
+    url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80'); 
     height: 100vh;
     width: 100%;
     display: flex;
